--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<manifest package="org.success.isp" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="Release" android:versionCode="43" android:installLocation="auto">
+<manifest package="org.success.isp" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="Release" android:versionCode="44" android:installLocation="auto">
     <application android:allowBackup="false" android:fullBackupOnly="false" android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Успех" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_r">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="Успех" android:screenOrientation="portrait" android:launchMode="singleTop">
             <intent-filter>
@@ -60,55 +60,38 @@
                 -->
             <meta-data android:name="android.app.extract_android_style" android:value="full"/>
             <!-- extract android style -->
-    </activity>
+     </activity>
 
-    <!-- Firebase Messaging specific services -->
-
-     <!--   <service android:name="com.success.android.firebasetest.MyFirebaseInstanceIDService" android:exported="false">  -->
+     <!-- Firebase Messaging specific services -->
 
 
-       <service android:name="com.success.android.firebasetest.ListenerService" android:exported="false">
-           <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-           </intent-filter>
-       </service>
-
-    <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/blue"/>
-
-
-
-<!--
-
-        <service android:name="com.success.android.firebasetest.MyFirebaseMessagingService" android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
+      <service android:name="com.success.android.firebasetest.ListenerService" android:exported="true">
+         <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+         </intent-filter>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="@string/default_notification_channel_id"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:value="@color/blue"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:value="@drawable/ic_stat_ic_notification"/>
+      </service>
 
 
--->
 
+     <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/blue"/>
 
-  <!--  <service android:name="com.google.firebase.messaging.cpp.FcmInstanceIDListenerService" android:exported="false"> -->
-  <!--    <intent-filter> -->
-  <!--      <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/> -->
-  <!--    </intent-filter> -->
-  <!--  </service> -->
-
-    <service android:name="com.google.firebase.messaging.cpp.RegistrationIntentService" android:exported="false">
-    </service>
-    <service android:name="com.google.firebase.messaging.MessageForwardingService" android:exported="false">
-    </service>
-
+     <service android:name="com.google.firebase.messaging.cpp.RegistrationIntentService" android:exported="false">
+     </service>
+     <service android:name="com.google.firebase.messaging.MessageForwardingService" android:exported="false">
+     </service>
 
      <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/icon"/>
+
 
 
     <!-- For adding service(s) please check: https://wiki.qt.io/AndroidServices -->
 
     </application>
 
-    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="28"/>
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29"/>
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
 
 
@@ -120,4 +103,4 @@
          Remove the comment if you do not require these default features. -->
     <!-- %%INSERT_FEATURES -->
 
-</manifest>
+    </manifest>
